--- a/papers/references/arch_simulation_meta.bib
+++ b/papers/references/arch_simulation_meta.bib
@@ -87,3 +87,19 @@
   numpages = {27},
   keywords = {timing simulator verification, microbenchmarks, Simulator diagnosis}
 }
+
+@incollection{sampled_simulation_survey,
+  title = {Sampled Processor Simulation: A Survey},
+  series = {Advances in Computers},
+  publisher = {Elsevier},
+  volume = {72},
+  pages = {173-224},
+  year = {2008},
+  booktitle = {Advances in COMPUTERS},
+  issn = {0065-2458},
+  doi = {https://doi.org/10.1016/S0065-2458(08)00004-1},
+  url = {https://www.sciencedirect.com/science/article/pii/S0065245808000041},
+  author = {Lieven Eeckhout},
+  abstract = {Abstract
+  Simulation of industry-standard benchmarks is extremely time-consuming. Sampled processor simulation speeds up the simulation by several orders of magnitude by simulating a limited number of sampling units rather than the execution of the entire program. This work presents a survey on sampled processor simulation and discusses solutions to the three major challenges to sampled processor simulation: how to choose representative sampling units; how to establish efficiently a sampling unit's architecture starting image; and how to efficiently establish an accurate sampling unit's microarchitecture starting image.}
+}
